[gd_scene load_steps=6 format=3 uid="uid://dovwega0a3tpe"]

[ext_resource type="Texture2D" uid="uid://brdfy8her0fkd" path="res://Resources/Kenney/Default/Transparent border/panel-transparent-border-009.png" id="1_e8huj"]
[ext_resource type="Script" path="res://Components/UI/general_button.gd" id="2_o6det"]
[ext_resource type="Texture2D" uid="uid://dgfjctusrj8il" path="res://Resources/Kenney/Default/Panel/panel-009.png" id="3_yehwt"]
[ext_resource type="Texture2D" uid="uid://pomxyagkv50d" path="res://Resources/Kenney/Default/Transparent center/panel-transparent-center-009.png" id="4_7sswb"]
[ext_resource type="Texture2D" uid="uid://c71qtagr7mor1" path="res://Resources/TopView_Robot_Asset_Pack/EnemyId_140061_BLUE.png" id="5_k6m8l"]

[node name="GeneralButton" type="Control"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -25.0
offset_right = 62.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("2_o6det")

[node name="NormalTexture" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(125, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("1_e8huj")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="ActiveTexture" type="NinePatchRect" parent="."]
visible = false
custom_minimum_size = Vector2(125, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("3_yehwt")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="DisableTexture" type="NinePatchRect" parent="."]
visible = false
custom_minimum_size = Vector2(125, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("4_7sswb")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="SelectIndicator" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 7.5
offset_right = -5.0
offset_bottom = -7.5
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(17.5, 17.5)
texture = ExtResource("5_k6m8l")
expand_mode = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
